fixed some of the weird h1 spacing due to jump up change

--- a/styles/components/linkstack.css
+++ b/styles/components/linkstack.css
@@ -19,6 +19,7 @@
   color: var(--clr-dh1);
   background-color: var(--clr-accent);
   padding-left: 2rem;
+  padding-top: .25rem;
 }
 
 .linkstack p {
